04-23-23 14:04 "Added some CSS Designs"

--- a/DjangoProject/DjangoApp/templates/index.html
+++ b/DjangoProject/DjangoApp/templates/index.html
@@ -10,7 +10,34 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Hello World Po</h1>
+			<form action="">
+				<table>
+					<caption>
+						<h3>Login Panel</h3>
+					</caption>
+					<tr>
+						<th>
+							<label for="username">Username: </label>
+						</th>
+						<td>
+							<input type="text" name="username" id="username">
+						</td>
+					</tr>
+					<tr>
+						<th>
+							<label for="password">Password: </label>
+						</th>
+						<td>
+							<input type="password" name="password" id="password">
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2">
+							<input type="submit" valur="Login">
+						</td>
+					</tr>
+				</table>
+			</form>
 		</div>
 	</body>
 </html>
