--- a/DjangoProject/static/styles/main.css
+++ b/DjangoProject/static/styles/main.css
@@ -4,8 +4,38 @@
 	box-sizing: none;
 	border: 0;
 	user-select: none;
+	outline: none;
 }
-h1{
-	color: wheat	;
-	font-family: 'Courier New', Courier, monospace;
+
+body{
+	background-color: #131320;
+	color: #ffffff;
+	width: 100%;
+	height: 100vh;
+}
+
+.container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.container form{
+	align-self: center;
+	border: 1px #ffffff solid;
+	padding: 0.5em;
+	margin: 0.75em;
+	border-radius: 0.25em;
+}
+
+.container input{
+	border-radius: 0.5em;
+	background-color: #131320;
+	color: #ffffff;
+	padding: 0.1em 0.5em;
+	border: 1px #ffffff solid;
+}
+
+.container form input[type='submit']{
+	width: 100%;
 }
