05-22-23 00:13 "May kasabay kaya ginanahan"

--- a/DjangoProject/DjangoApp/templates/index.html
+++ b/DjangoProject/DjangoApp/templates/index.html
@@ -13,7 +13,7 @@
 			<form action="">
 				<table>
 					<caption>
-						<h3>Login Panel</h3>
+						<h3>Login Panel {{ data.id }}</h3>
 					</caption>
 					<tr>
 						<th>
