--- a/DjangoProject/DjangoApp/templates/registration.html
+++ b/DjangoProject/DjangoApp/templates/registration.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Login</title> 
+		<title>Registration</title>
 		<link rel="stylesheet" href="{% static '/styles/main.css' %}">
 	</head>
 	<body>
@@ -14,8 +14,7 @@
 				{% csrf_token %}
 				<table>
 					<caption>
-						<h3>Login Panel</h3>
-						<h3>{{ data.error }}</h3>
+						<h3>Registration Form</h3>
 					</caption>
 					<tr>
 						<th>
@@ -31,6 +30,14 @@
 						</th>
 						<td>
 							<input type="password" name="password" id="password">
+						</td>
+					</tr>
+					<tr>
+						<th>
+							<label for="password2">Retype-Password: </label>
+						</th>
+						<td>
+							<input type="password2" name="password2" id="password">
 						</td>
 					</tr>
 					<tr>
