--- a/DjangoProject/DjangoApp/templates/index.html
+++ b/DjangoProject/DjangoApp/templates/index.html
@@ -15,7 +15,7 @@
 				<table>
 					<caption>
 						<h3>Login Panel</h3>
-						<h3>{{ data.error }}</h3>
+						<h3>{{ data.msg }}</h3>
 					</caption>
 					<tr>
 						<th>
