--- a/DjangoProject/DjangoApp/templates/registration.html
+++ b/DjangoProject/DjangoApp/templates/registration.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<form action="/" method="POST">
+			<form action="reg" method="POST">
 				{% csrf_token %}
 				<table>
 					<caption>
